--- a/PA8/makefile
+++ b/PA8/makefile
@@ -25,31 +25,31 @@ all: $(O_FILES)
 	$(CC) $(CXXFLAGS) -o PA8 $(O_FILES) $(LIBS) #$(PATHI) $(PATHL)
 
 main.o: ../src/main.cpp
-	$(CC) $(CXXFLAGS) -c ../src/main.cpp -o main.o $(INDLUDES)
+	$(CC) $(CXXFLAGS) -c ../src/main.cpp -o main.o $(INCLUDES)
 
 camera.o: ../src/camera.cpp
-	$(CC) $(CXXFLAGS) -c ../src/camera.cpp -o camera.o $(INDLUDES)
+	$(CC) $(CXXFLAGS) -c ../src/camera.cpp -o camera.o $(INCLUDES)
 
 engine.o: ../src/engine.cpp
-	$(CC) $(CXXFLAGS) -c ../src/engine.cpp -o engine.o $(INDLUDES)
+	$(CC) $(CXXFLAGS) -c ../src/engine.cpp -o engine.o $(INCLUDES)
 
 graphics.o: ../src/graphics.cpp
-	$(CC) $(CXXFLAGS) -c ../src/graphics.cpp -o graphics.o $(INDLUDES)
+	$(CC) $(CXXFLAGS) -c ../src/graphics.cpp -o graphics.o $(INCLUDES)
 
 object.o: ../src/object.cpp
-	$(CC) $(CXXFLAGS) -c ../src/object.cpp -o object.o $(INDLUDES)
+	$(CC) $(CXXFLAGS) -c ../src/object.cpp -o object.o $(INCLUDES)
 
 shader.o: ../src/shader.cpp
-	$(CC) $(CXXFLAGS) -c ../src/shader.cpp -o shader.o $(INDLUDES)
+	$(CC) $(CXXFLAGS) -c ../src/shader.cpp -o shader.o $(INCLUDES)
 
 window.o: ../src/window.cpp
-	$(CC) $(CXXFLAGS) -c ../src/window.cpp -o window.o $(INDLUDES)
+	$(CC) $(CXXFLAGS) -c ../src/window.cpp -o window.o $(INCLUDES)
 
 tinyxml2.o: ../src/tinyxml2.cpp
-	$(CC) $(CXXFLAGS) -c ../src/tinyxml2.cpp -o tinyxml2.o $(INDLUDES)
+	$(CC) $(CXXFLAGS) -c ../src/tinyxml2.cpp -o tinyxml2.o $(INCLUDES)
 
 physics.o: ../src/physics.cpp
-	$(CC) $(CXXFLAGS) -c ../src/physics.cpp -o physics.o $(INDLUDES)
+	$(CC) $(CXXFLAGS) -c ../src/physics.cpp -o physics.o $(INCLUDES)
 
 clean:
 	-@if rm *.o PA8 2>/dev/null || true; then echo "Main Removed"; else echo "No Main"; fi
